--- a/404.html
+++ b/404.html
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <h1>File Missing</h1>
+    <h1>File it's just Gone!</h1>
     <p>I am not able to find this file.</p>
 </body>
 </html>
