--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>That file isn't here</title>
+    <title>File it's just Gone!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
 
