--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>File it's just Gone!</title>
+    <title>Sorry, I cannot find that file!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
 
@@ -53,7 +53,7 @@
     </style>
 </head>
 <body>
-    <h1>File it's just Gone!</h1>
+    <h1>Sorry, I cannot find that file!</h1>
     <p>I am not able to find this file.</p>
 </body>
 </html>
